--- a/vercel.json
+++ b/vercel.json
@@ -2,9 +2,9 @@
     "version": 2,
     "name": "yummy",
     "builds": [
-       { "src": "api/index.js", "use": "@vercel/node" }
+       { "src": "/api/index.js", "use": "@vercel/node" }
     ],
     "routes": [
-       { "src": "/api/(.*)", "dest": "/api/index.js" }
+       { "src": "/(.*)", "dest": "/api/index.js" }
     ]
  }
