--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,10 @@
 {
     "version": 2,
-    "name": "yummy",
+    "name": "real estate",
     "builds": [
        { "src": "index.js", "use": "@vercel/node" }
     ],
     "routes": [
-       { "src": "/(.*)", "dest": "/api/index.js" }
+       { "src": "/(.*)", "dest": "api/index.js" }
     ]
  }
