--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "version": 2,
     "name": "yummy",
     "builds": [
-       { "src": "index.js", "use": "@vercel/node" }
+       { "src": "api/index.js", "use": "@vercel/node" }
     ],
     "routes": [
        { "src": "/(.*)", "dest": "/api/index.js" }
