--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,3 @@
 {
-    "version": 2,
-    "name": "yummy",
-    "builds": [
-       { "src": "api/index.js", "use": "@vercel/node" }
-    ],
-    "routes": [
-       { "src": "/(.*)", "dest": "/api/index.js" }
-    ]
+    "rewrites": [{ "source": "/(.*)", "destination": "/api"}]
  }
