--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,10 @@
 {
-    "rewrites": [{ "source": "/(.*)", "destination": "/api"}]
+    "version": 2,
+    "name": "yummy",
+    "builds": [
+       { "src": "api/index.js", "use": "@vercel/node" }
+    ],
+    "routes": [
+       { "src": "/(.*)", "dest": "/api/index.js" }
+    ]
  }
